@@ -1,3 +1,6 @@
+ * Using the new ap_ssl_* functions available since Apache 2.4.48
+ * Some compatibility fixes with the ever evolving OpenSSL API
+
 v1.15.19
 --------------------------------------------------------------------------------
  * Fixed the Makefile to include the test module in the distribution, so that
